apollo-router/src/plugins/response_cache/snapshots/apollo_router__plugins__subgraph_cache__tests__insert.snap
---
source: apollo-router/src/plugins/subgraph_cache/tests.rs
expression: cache_keys
---
[
  {
    "invalidationKeys": [
      "currentUser",
      "version:1.0:subgraph:user:type:Query"
    ],
    "kind": {
      "rootFields": [
        "currentUser"
      ]
    },
    "subgraphName": "user",
    "subgraphRequest": {
      "query": "{ currentUser { activeOrganization { __typename id } } }"
    },
    "status": "new",
    "cacheControl": {
      "created": 0,
      "maxAge": 86400,
      "public": true
    },
    "data": {
      "data": {
        "currentUser": {
          "activeOrganization": {
            "__typename": "Organization",
            "id": "1"
          }
        }
      }
    }
  },
  {
    "invalidationKeys": [
      "organization",
      "organization-1",
      "version:1.0:subgraph:orga:type:Organization",
      "version:1.0:subgraph:orga:type:Organization:entity:bcc0a4a9f8c595510c0ff8849bc36b402ac3f52506392d67107c623528ff11f4"
    ],
    "kind": {
      "typename": "Organization",
      "entityKey": {
        "id": "1"
      }
    },
    "subgraphName": "orga",
    "subgraphRequest": {
      "query": "query($representations: [_Any!]!) { _entities(representations: $representations) { ... on Organization { creatorUser { __typename id } } } }",
      "variables": {
        "representations": [
          {
            "id": "1",
            "__typename": "Organization"
          }
        ]
      }
    },
    "status": "new",
    "cacheControl": {
      "created": 0,
      "maxAge": 86400,
      "public": true
    },
    "data": {
      "creatorUser": {
        "__typename": "User",
        "id": 2
      }
    }
  }
]
