apollo-router/src/plugins/response_cache/snapshots/apollo_router__plugins__subgraph_cache__tests__insert_with_nested_field_set-3.snap
---
source: apollo-router/src/plugins/subgraph_cache/tests.rs
expression: cache_keys
---
[
  {
    "invalidationKeys": [
      "allProducts",
      "version:1.0:subgraph:products:type:Query"
    ],
    "kind": {
      "rootFields": [
        "allProducts"
      ]
    },
    "subgraphName": "products",
    "subgraphRequest": {
      "query": "{ allProducts { name createdBy { __typename email country { a } } } }"
    },
    "status": "cached",
    "cacheControl": {
      "created": 0,
      "maxAge": 86400,
      "public": true
    },
    "data": {
      "data": {
        "allProducts": [
          {
            "name": "Test",
            "createdBy": {
              "__typename": "User",
              "email": "test@test.com",
              "country": {
                "a": "France"
              }
            }
          }
        ]
      }
    }
  },
  {
    "invalidationKeys": [
      "user-email:test@test.com-country-a:France",
      "version:1.0:subgraph:users:type:User",
      "version:1.0:subgraph:users:type:User:entity:210e26346d676046faa9fb55d459273a43e5b5397a1a056f179a3521dc5643aa"
    ],
    "kind": {
      "typename": "User",
      "entityKey": {
        "email": "test@test.com",
        "country": {
          "a": "France"
        }
      }
    },
    "subgraphName": "users",
    "subgraphRequest": {
      "query": "query($representations: [_Any!]!) { _entities(representations: $representations) { ... on User { name } } }",
      "variables": {
        "representations": []
      }
    },
    "status": "cached",
    "cacheControl": {
      "created": 0,
      "maxAge": 86400,
      "public": true
    },
    "data": {
      "name": "test"
    }
  }
]
