apollo-router/src/plugins/response_cache/snapshots/apollo_router__plugins__subgraph_cache__tests__insert_with_requires-3.snap
---
source: apollo-router/src/plugins/subgraph_cache/tests.rs
expression: cache_keys
---
[
  {
    "invalidationKeys": [
      "product",
      "product-1",
      "version:1.0:subgraph:inventory:type:Product",
      "version:1.0:subgraph:inventory:type:Product:entity:72bafad9ffe61307806863b13856470e429e0cf332c99e5b735224fb0b1436f7"
    ],
    "kind": {
      "typename": "Product",
      "entityKey": {
        "upc": "1"
      }
    },
    "subgraphName": "inventory",
    "subgraphRequest": {
      "query": "query($representations: [_Any!]!) { _entities(representations: $representations) { ... on Product { shippingEstimate } } }",
      "variables": {
        "representations": []
      }
    },
    "status": "cached",
    "cacheControl": {
      "created": 0,
      "maxAge": 86400,
      "public": true
    },
    "data": {
      "shippingEstimate": 15
    }
  },
  {
    "invalidationKeys": [
      "topProducts",
      "topProducts-5",
      "version:1.0:subgraph:products:type:Query"
    ],
    "kind": {
      "rootFields": [
        "topProducts"
      ]
    },
    "subgraphName": "products",
    "subgraphRequest": {
      "query": "{ topProducts { __typename upc name price weight } }"
    },
    "status": "cached",
    "cacheControl": {
      "created": 0,
      "maxAge": 86400,
      "public": true
    },
    "data": {
      "data": {
        "topProducts": [
          {
            "__typename": "Product",
            "upc": "1",
            "name": "Test",
            "price": 150,
            "weight": 5
          }
        ]
      }
    }
  }
]
