apollo-router/src/plugins/response_cache/snapshots/apollo_router__plugins__subgraph_cache__tests__no_data-2.snap
---
source: apollo-router/src/plugins/subgraph_cache/tests.rs
expression: response
---
{
  "data": {
    "currentUser": {
      "allOrganizations": [
        {
          "id": "1",
          "name": "Organization 1"
        },
        {
          "id": "3",
          "name": "Organization 3"
        }
      ]
    }
  }
}
