apollo-router/src/plugins/response_cache/snapshots/apollo_router__plugins__subgraph_cache__tests__no_data.snap
---
source: apollo-router/src/plugins/subgraph_cache/tests.rs
expression: cache_keys
---
[
  {
    "invalidationKeys": [
      "currentUser",
      "version:1.0:subgraph:user:type:Query"
    ],
    "kind": {
      "rootFields": [
        "currentUser"
      ]
    },
    "subgraphName": "user",
    "subgraphRequest": {
      "query": "{ currentUser { allOrganizations { __typename id } } }"
    },
    "status": "new",
    "cacheControl": {
      "created": 0,
      "maxAge": 86400,
      "noStore": true
    },
    "data": {
      "data": {
        "currentUser": {
          "allOrganizations": [
            {
              "__typename": "Organization",
              "id": "1"
            },
            {
              "__typename": "Organization",
              "id": "3"
            }
          ]
        }
      }
    }
  },
  {
    "invalidationKeys": [
      "organization",
      "organization-1",
      "version:1.0:subgraph:orga:type:Organization",
      "version:1.0:subgraph:orga:type:Organization:entity:bcc0a4a9f8c595510c0ff8849bc36b402ac3f52506392d67107c623528ff11f4"
    ],
    "kind": {
      "typename": "Organization",
      "entityKey": {
        "id": "1"
      }
    },
    "subgraphName": "test",
    "subgraphRequest": {
      "query": "query($representations: [_Any!]!) { _entities(representations: $representations) { ... on Organization { name } } }",
      "variables": {
        "representations": [
          {
            "id": "1",
            "__typename": "Organization"
          },
          {
            "id": "3",
            "__typename": "Organization"
          }
        ]
      }
    },
    "status": "new",
    "cacheControl": {
      "created": 0,
      "maxAge": 3600,
      "public": true
    },
    "data": {
      "name": "Organization 1"
    }
  },
  {
    "invalidationKeys": [
      "organization",
      "organization-3",
      "version:1.0:subgraph:orga:type:Organization",
      "version:1.0:subgraph:orga:type:Organization:entity:2a66208010218056832ffcb8e3e26c636cb2a57e71fc62b424909e2ab2246145"
    ],
    "kind": {
      "typename": "Organization",
      "entityKey": {
        "id": "3"
      }
    },
    "subgraphName": "test",
    "subgraphRequest": {
      "query": "query($representations: [_Any!]!) { _entities(representations: $representations) { ... on Organization { name } } }",
      "variables": {
        "representations": [
          {
            "id": "1",
            "__typename": "Organization"
          },
          {
            "id": "3",
            "__typename": "Organization"
          }
        ]
      }
    },
    "status": "new",
    "cacheControl": {
      "created": 0,
      "maxAge": 3600,
      "public": true
    },
    "data": {
      "name": "Organization 3"
    }
  }
]
