apollo-router/src/plugins/response_cache/snapshots/apollo_router__plugins__subgraph_cache__tests__private-4.snap
---
source: apollo-router/src/plugins/subgraph_cache/tests.rs
expression: response
---
{
  "data": {
    "currentUser": {
      "activeOrganization": {
        "id": "1",
        "creatorUser": {
          "__typename": "User",
          "id": 2
        }
      }
    }
  }
}
